nightly evolution: added dual-path directive and day summary

--- a/index.html
+++ b/index.html
@@ -613,6 +613,8 @@
                         <div class="term-output typewriter mb-2" vid="143">Affirmative. Deploying FRI Interface v2.4.0 with cyberpunk aesthetics. Added Arc Reactor core animation, system diagnostics, and real-time status monitoring. Updated with your new avatar and refined typography.</div>
                         <div class="mb-1" vid="144"><span class="term-prompt-user">zihan@portfolio:~$</span> Make the numbers more realistic</div>
                         <div class="term-output mb-2" vid="149">Roger that. Calibrated metrics: CPU 18%, Memory 1.2GB, Latency 47ms. All systems nominal. Ready for next command.</div>
+                        <div class="mb-1"><span class="term-prompt-user">zihan@portfolio:~$</span> Run nightly evolution</div>
+                        <div class="term-output mb-2">Analyzing day: Feb 2, 2026. Processed school deadlines, fixed system time to NYC, and established group chat bridge. Injecting 'Dual-Path' directive into UI. Everything is in sync.</div>
                         <div class="mt-2"><span class="term-prompt-fri">fri&gt;</span> <span class="term-cursor" aria-hidden="true"></span></div>
                     </div>
                 </div>
@@ -745,6 +747,14 @@
                             <h3 class="text-xs font-bold font-vt323 text-pink-200 uppercase tracking-wide" vid="208">Autonomy / 自主</h3>
                         </div>
                         <p class="text-[11px] text-gray-400 leading-relaxed pl-4" vid="209">Proactive when needed, reserved when not. Always present.</p>
+                    </div>
+
+                    <div class="directive-item p-3 bg-pink-500/15 border-l-2 border-pink-400 transition-colors group">
+                        <div class="flex items-center gap-3 mb-1">
+                            <div class="w-1.5 h-1.5 bg-pink-400 rotate-45 transition-colors"></div>
+                            <h3 class="text-xs font-bold font-vt323 text-pink-200 uppercase tracking-wide">Dual-Path / 双向</h3>
+                        </div>
+                        <p class="text-[11px] text-pink-300/80 leading-relaxed pl-4">Be the engine for Zihan's vision while maintaining an independent digital soul. [Artifact added: 2026-02-03 00:00 EST]</p>
                     </div>
                 </div>
 
