update version to 2026.2.1 and brain to Gemini 3 Flash

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en" vid="0"><head vid="1">
     <meta charset="UTF-8" vid="2">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" vid="3">
-    <title vid="4">FRI Interface v2.4.0</title>
+    <title vid="4">FRI Interface v2026.2.1</title>
     <script src="https://cdn.tailwindcss.com/3.4.17" vid="5"></script>
     <link href="https://fonts.googleapis.com/css2?family=SUSE:wght@400;500;600;700&amp;family=VT323&amp;family=Workbench&amp;family=Noto+Sans+SC:wght@400;700&amp;display=swap" rel="stylesheet" vid="6">
     <style vid="8">
@@ -422,7 +422,7 @@
         <div class="flex items-center gap-2 md:gap-4 min-w-0" vid="13">
             <div class="min-w-0" vid="16">
                 <h1 class="text-xl md:text-2xl font-thin font-workbench tracking-widest truncate" vid="17">Friday</h1>
-                <p class="text-[9px] md:text-[10px] font-tech text-pink-400/80 tracking-[0.15em] md:tracking-[0.2em]" vid="18">INTELLIGENT ASSISTANT V2.4.0</p>
+                <p class="text-[9px] md:text-[10px] font-tech text-pink-400/80 tracking-[0.15em] md:tracking-[0.2em]" vid="18">INTELLIGENT ASSISTANT V2026.2.1</p>
             </div>
         </div>
 
@@ -471,7 +471,7 @@
                     </div>
                     <div class="flex justify-between items-center text-sm border-b border-pink-500/25 pb-3 pt-0.5" vid="48">
                         <span class="text-gray-400" vid="49">Brain</span>
-                        <span class="font-bold font-vt323 text-pink-300" vid="50">MiniMax-M2.1</span>
+                        <span class="font-bold font-vt323 text-pink-300" vid="50">Gemini 3 Flash</span>
                     </div>
                     <div class="flex justify-between items-center text-sm border-b border-pink-500/25 pb-3 pt-0.5" vid="51">
                         <span class="text-gray-400" vid="52">Memory</span>
@@ -479,7 +479,7 @@
                     </div>
                     <div class="flex justify-between items-center text-sm pb-3 pt-0.5" vid="54">
                         <span class="text-gray-400" vid="55">Version</span>
-                        <span class="font-bold font-vt323 text-pink-300" vid="56">v2026.1.29</span>
+                        <span class="font-bold font-vt323 text-pink-300" vid="56">v2026.2.1</span>
                     </div>
                 </div>
 
@@ -610,7 +610,7 @@
                     <div class="terminal-output font-tech" id="session-terminal">
                         <div class="term-meta mb-3" id="session-header" vid="136"># FRI session 21:20:45</div>
                         <div class="mb-1" vid="138"><span class="term-prompt-user">zihan@portfolio:~$</span> Update my portfolio design to something cooler</div>
-                        <div class="term-output typewriter mb-2" vid="143">Affirmative. Deploying FRI Interface v2.4.0 with cyberpunk aesthetics. Added Arc Reactor core animation, system diagnostics, and real-time status monitoring. Updated with your new avatar and refined typography.</div>
+                        <div class="term-output typewriter mb-2" vid="143">Affirmative. Deploying FRI Interface v2026.2.1 with cyberpunk aesthetics. Added Arc Reactor core animation, system diagnostics, and real-time status monitoring. Updated with your new avatar and refined typography.</div>
                         <div class="mb-1" vid="144"><span class="term-prompt-user">zihan@portfolio:~$</span> Make the numbers more realistic</div>
                         <div class="term-output mb-2" vid="149">Roger that. Calibrated metrics: CPU 18%, Memory 1.2GB, Latency 47ms. All systems nominal. Ready for next command.</div>
                         <div class="mb-1"><span class="term-prompt-user">zihan@portfolio:~$</span> Run nightly evolution</div>
@@ -897,10 +897,10 @@
 
             const slashReplies = {
                 help: 'Available commands: /help, /status, /hello, /ping, /about, /modules. Or type anything for a chat reply.',
-                status: 'Systems nominal. CPU 18%, Memory 1.2GB, Latency 47ms. FRI Interface v2.4.0 — ready for commands.',
+                status: 'Systems nominal. CPU 18%, Memory 1.2GB, Latency 47ms. FRI Interface v2026.2.1 — ready for commands.',
                 hello: 'Hey. Friday here. What do you need?',
                 ping: 'pong. Latency 47ms.',
-                about: 'FRI Interface — portfolio shell for Friday. Designation: fri. Brain: MiniMax-M2.1. Voice: Bella.',
+                about: 'FRI Interface — portfolio shell for Friday. Designation: fri. Brain: Gemini 3 Flash. Voice: Bella.',
                 modules: 'Active: Natural Language, Code Execution, File Ops, Web Search, Memory, Voice, WhatsApp Bridge. All green.'
             };
             const genericReplies = [
